--- a/bs-select.css
+++ b/bs-select.css
@@ -51,3 +51,9 @@
     min-height: 0 !important;
     min-width: 5rem;
 }
+
+.bs-wrapper .badge
+{
+    margin-top: 0.1rem;
+    margin-bottom: 0.1rem;
+}
